# urlmonitor

./: .gitignore  README.md  murl  pyproject.toml  urlmonitor.py  urlmonitor.spec
scripts/: build.sh
