[project]
name = "monitor"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configargparse>=1.7.1",
    "cryptography>=43.0.0",
    "pyopenssl>=25.1.0",
    "pysocks>=1.7.1",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
]

